eComm Product: Big product image: No longer cropping the big product image.

--- a/extended/widgets/ecom-product.less
+++ b/extended/widgets/ecom-product.less
@@ -16,35 +16,25 @@
             }
         }
         .ecom-product-preview-image-wrap {
-            height: 350px;
             margin-bottom: 1em;
-            background-position: center center;
+            // Hiding the background image
+            background-position: -100% 0;
             background-repeat: no-repeat;
             -webkit-background-size: cover;
             -moz-background-size: cover;
             -o-background-size: cover;
             background-size: cover;
             overflow: hidden;
-            @media @mobile {
-               height: auto;
-               background-position: -100% 0;
-            }
 
             img {
-                display: none;
-                @media @mobile {
-                   display: block;
-                   max-width: 100%;
-                   height: auto;
-                   margin: 0 auto;
-                }
+               display: block;
+               max-width: 100%;
+               height: auto;
             }
         }
+
         .ecom-product-image-list {
             padding: 0;
-            @media @mobile {
-               text-align: center;
-            }
             li {
                 height: 50px;
                 width: 50px;
@@ -57,10 +47,7 @@
                 -o-background-size: cover;
                 background-size: cover;
                 overflow: hidden;
-                @media @mobile {
-                    float: none;
-                    display: inline-block;
-                }
+
                 img {
                     display: none;
                 }
